--- a/AFLordleCSS.css
+++ b/AFLordleCSS.css
@@ -1,6 +1,16 @@
 html {
-width: 1100px;
-font-family: Arial, Helvetica, sans-serif;
-text-align: center
+    width: 1100px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center
 
+}
+
+.green {
+    color: green;
+    font-weight: bold;
+}
+
+.yellow {
+    color: rgb(22, 40, 204);
+    font-weight: bold;
 }
