--- a/AFLordleCSS.css
+++ b/AFLordleCSS.css
@@ -1,7 +1,16 @@
 html {
-    width: 1100px;
+    width: 750px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+
+h1 {
+    font-size: 50px;
+    line-height: 30px;
+}
+
+.Text {
+    font-size: 25px;
 }
 
 body {
@@ -11,22 +20,43 @@ body {
 
 .green {
     width: 100px;
-    height: 100px;
+    height: 75px;
     background-color: #538D4E;
     font-weight: bold;
+    text-shadow: 1.5px 1.5px #000000;
 }
 
 .yellow {
     width: 100px;
-    height: 100px;
+    height: 75px;
     background-color: #B59F3B;
     font-weight: bold;
+    text-shadow: 1.5px 1.5px #000000;
 }
 
 
 .black {
     width: 100px;
-    height: 100px;
+    height: 75px;
     background: #3A3A3C;
     font-weight: bold;
+    text-shadow: 1.5px 1.5px #000000;
   }
+
+#submitName {
+    height:40px;
+    width:100px;
+    font-size: large;
+}
+
+#fullName {
+    height:32px;
+    width: 160px;
+    font-size:large;
+}
+
+.PlayButton {
+    height:40px;
+    width:100px;
+    font-size: large;
+}
