--- a/AFLordleCSS.css
+++ b/AFLordleCSS.css
@@ -1,6 +1,7 @@
 html {
-    width: 820px;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    min-width: 800px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 0;
@@ -83,6 +84,13 @@ body {
     border-width: thick, solid;
     border-color: #2a2a2b;
     border-style: solid;
+}
+
+.table {
+    width: 70%;
+    margin-left:auto;
+    margin-right:auto;
+    min-width: 800px;
 }
 
 #submitName {
@@ -230,6 +238,7 @@ th, td {
     padding-right: 1em;
     padding-bottom: 1em;
     cursor: pointer;
+    color: rgb(179, 173, 173);
     transition: color 0.5s, background 0.5s;
 }
 
@@ -258,7 +267,7 @@ th, td {
 .popup {
     margin: 100px auto;
     padding: 20px;
-    background: #fff;
+    background: rgb(219, 219, 219);
     border-radius: 5px;
     width: 30%;
     position: relative;
@@ -267,7 +276,7 @@ th, td {
   
 .popup h2 {
     margin-top: 0;
-    color: #333;
+    color: rgb(0, 0, 0);
     font-family: Tahoma, Arial, sans-serif;
 }
 
@@ -295,6 +304,7 @@ th, td {
 
 li {
     padding-bottom: 20px;
+    color:black;
 }
   
 @media screen and (max-width: 700px){
