--- a/AFLordleCSS.css
+++ b/AFLordleCSS.css
@@ -1,10 +1,11 @@
 html {
-    width: 820px;
-    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 0;
     margin: 0;
+    width: 90vw;
+    height: 100vh;
+    min-width: 820px;
 }
 
 .checkbox-container {
@@ -114,6 +115,14 @@ body {
 .tableBlocks {
     border-collapse: separate;
     border-spacing: 5px;
+}
+
+.table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75vw;
+    min-width: 800px;
+    
 }
 
 th, td {
